installation fat footer

--- a/univ/templates/ins_coordonnees_form.html
+++ b/univ/templates/ins_coordonnees_form.html
@@ -14,7 +14,7 @@
                 <div class="col-md-4">
                     <p><h3><span class="fa fa-university"></span> Choix de programme</h3></p>
                     {{ formulaire_programme|crispy }}
-                    <input type="submit" value="Confirmez">
+                    <input class="btn btn-success" type="submit" value="Confirmez">
                 </div>
             </form>
             <div class="col-md-4">
